--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@
             <button class="function" data-function="negate">±</button>
         </div>
     </div>
+    <script src="index.js"></script>
+
 </body>
 </html>
